Update import path for components in Go2 documentation

--- a/pages/go2/index.mdx
+++ b/pages/go2/index.mdx
@@ -1,4 +1,4 @@
-import { Callout, Table, Tr, Td, Th } from 'nexTra/components'
+import { Callout, Table, Tr, Td, Th } from 'nextra/components'
 
 # Current Project Status for Pro and Air 🤖
 <br/>
